moves files to root

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- This is the header -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- 3 body sections -->
+        <!-- 3 links in header that move you around the page -->
         <div>
             <ul>
                 <li>
@@ -28,6 +28,7 @@
             </ul>
         </div>
     </header>
+    <!-- The 3 body sections containing information about the 3 topics (Search engine optimization, Online Reputation mangaement, Social media makreting) -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -60,6 +61,7 @@
                 increase your lead generation.
             </p>
         </div>
+        <!-- aside section on right of screen displaying (lead generation, Brand awareness, and cost management) -->
     </div>
     <section class="benefits">
         <section class="benefit-lead">
@@ -88,7 +90,7 @@
         </section>
     </section>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
