fixed links to sections on page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- The 3 body sections containing information about the 3 topics (Search engine optimization, Online Reputation mangaement, Social media makreting) -->
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="Search engine optimization image with notebook, coffee,laptop,and asorted colored pencils" />
             <h2>Search Engine Optimization</h2>
@@ -51,7 +51,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id=" social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                 alt="Social media marketing image with computers,stickers,and coffee mugs" />
             <h2>Social Media Marketing</h2>
